--- a/VbWebApp/Views/Player/index.cshtml
+++ b/VbWebApp/Views/Player/index.cshtml
@@ -31,4 +31,7 @@
       }
     </tbody>
   </table>
+  <form asp-controller="Player" asp-action="Add" method="get">
+    <button type="submit" class="btn btn-primary">Add new player</button>
+  </form>
 </div>
